--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 					function getUserData() {
 						FB.api('/me', 'GET', {fields: 'first_name,last_name,name,id,picture.width(100).height(100)'},function(response) {
 							document.getElementById('response').innerHTML = 'Hello ' + response.name;
-							$('.form-control.name').val(response.name);
+							$('#input-user-name').val(response.name);
 							document.getElementById('pict').innerHTML = "<img src='"+response.picture.data.url+"'>";
 							$('#picrscr').val(response.picture.data.url);
 						});
@@ -72,7 +72,7 @@
 								//user just authorized your app
 								document.getElementById('response').innerHTML = 'Hello '+ 'in faceboock';
 								getUserData();
-								$('.form-control.name').attr("disabled", true);
+								$('#input-user-name').attr("disabled", true);
 							}
 						}, {scope: 'email,public_profile', return_scopes: true});
 					}, false);
@@ -80,8 +80,8 @@
 						//do the login
 						FB.logout(function(response) {
 							document.getElementById('response').innerHTML =  'bye bye';
-							$('.form-control.name').val('');
-							$('.form-control.name').attr("disabled", false);
+							$('#input-user-name').val('');
+							$('#input-user-name').attr("disabled", false);
 							$('#pict').empty();
 							$('#picrscr').val('');
 						});
