--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
 				window.fbAsyncInit = function() {
 					//SDK loaded, initialize it
 					FB.init({
-						appId      : '184316765568102',
+						appId      : '290383781535876',//184316765568102
 						xfbml      : true,
 						version    : 'v2.2'
 					});
