--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,7 @@
 							//user is authorized
 							document.getElementById('response').innerHTML = 'Hello '+ 'in faceboock';
 							getUserData();
+							console.log('>>>>',response);
 						} else {
 
 						}
