--- a/public/index.html
+++ b/public/index.html
@@ -123,7 +123,7 @@
                 <h3>Chat: This room is: <span id="current_room_id"></span></h3>
                 <div class="row">
 			
-		   <form action="" method="post" id="post-search" class="form-horizontal">
+		   <form action="/search" method="post" id="post-search" class="form-horizontal">
                         <div class="form-group">
                             <div class="">
                                 <input type="text" name="search" class="form-control" id="input-search" placeholder="search">
